tests/integration/fail/metavalue_contract_default.ncl
# test = 'error'
#
# [metadata]
# error = 'EvalError::BlameError'
{ val | default | Number = true }.val
